--- a/DateOnTheMoon/Base.lproj/Main.storyboard
+++ b/DateOnTheMoon/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="MGd-Xm-y4W">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="MGd-Xm-y4W">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
@@ -122,7 +122,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Moment Details" id="6BB-mG-Cmb"/>
+                    <navigationItem key="navigationItem" title="Moment Details" id="6BB-mG-Cmb">
+                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="zaK-Qk-hjO">
+                            <connections>
+                                <action selector="shareMoment:" destination="qNQ-uI-eKy" id="u4n-ch-EOY"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rgs-FB-Nw4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
